--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,12 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <style name="ChatBubble">
+        <item name="android:padding">@dimen/padding_normal</item>
+    </style>
+
+    <style name="ChatBubble.Text">
+        <item name="android:padding">@dimen/padding_normal</item>
+        <item name="android:background">@drawable/chat_bubble</item>
     </style>
 
 </resources>
