--- a/app/src/main/res/layout-w900dp/include_chatrooms.xml
+++ b/app/src/main/res/layout-w900dp/include_chatrooms.xml
@@ -9,7 +9,7 @@
               android:divider="?android:attr/dividerHorizontal"
               android:orientation="horizontal"
               android:showDividers="middle"
-              tools:context="com.silwek.cleverchat.ChatRoomsActivity">
+              tools:context="com.silwek.cleverchat.ui.activities.ChatRoomsActivity">
 
     <!--
     This layout is a two-pane layout for the ChatRooms
@@ -24,7 +24,7 @@
                                             android:layout_marginLeft="16dp"
                                             android:layout_marginRight="16dp"
                                             app:layoutManager="LinearLayoutManager"
-                                            tools:context="com.silwek.cleverchat.ChatRoomsActivity"
+                                            tools:context="com.silwek.cleverchat.ui.activities.ChatRoomsActivity"
                                             tools:listitem="@layout/item_chat"/>
 
     <FrameLayout
