--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -5,7 +5,7 @@
               android:layout_height="match_parent"
               android:fitsSystemWindows="true"
               android:orientation="vertical"
-              tools:context="com.silwek.cleverchat.ChatActivity"
+              tools:context="com.silwek.cleverchat.ui.activities.ChatActivity"
               tools:ignore="MergeRootFrame">
 
     <android.support.design.widget.AppBarLayout
