--- a/app/src/main/res/layout/view_chat.xml
+++ b/app/src/main/res/layout/view_chat.xml
@@ -6,7 +6,7 @@
               android:layout_height="match_parent"
               android:orientation="vertical"
               app:layoutManager="LinearLayoutManager"
-              tools:context="com.silwek.cleverchat.ChatRoomsActivity"
+              tools:context="com.silwek.cleverchat.ui.activities.ChatRoomsActivity"
               tools:listitem="@layout/item_message">
 
     <android.support.v7.widget.RecyclerView
