--- a/app/src/main/res/layout/view_chat.xml
+++ b/app/src/main/res/layout/view_chat.xml
@@ -15,6 +15,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         app:layoutManager="LinearLayoutManager"
+        app:reverseLayout="true"
         tools:listitem="@layout/item_message"/>
 
     <LinearLayout
